<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity"
    android:background="@mipmap/login_page">

    <EditText
        android:id="@+id/idUsername"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:background="@drawable/corner_login"
        android:hint="@string/login_username"
        android:inputType="numberDecimal"
        android:paddingStart="8dp"
        android:maxLength="10"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry"
        android:autofillHints="@null" />

    <EditText
        android:id="@+id/idPassword"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/corner_login"
        android:hint="@string/login_password"
        android:paddingStart="8dp"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:maxLength="10"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idUsername"
        android:autofillHints="@null"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/idPassword"
        app:layout_constraintStart_toStartOf="@id/idPassword"
        app:layout_constraintEnd_toEndOf="@+id/idPassword">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/idRemember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_remember"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/idAutologin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_autologin"/>
        </LinearLayout>

    </LinearLayout>




    <Button
        android:id="@+id/idSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/corner_login"
        android:text="@string/login_sign_in"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idPassword"
        app:layout_constraintVertical_bias="0.185" />

    <Button
        android:id="@+id/idSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/corner_login"
        android:text="@string/login_sign_up"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idPassword"
        app:layout_constraintVertical_bias="0.185" />


</androidx.constraintlayout.widget.ConstraintLayout>